WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
15877
REGRESSION:
r27486
caused a layout regression at my bank's website
https://bugs.webkit.org/show_bug.cgi?id=15877
Summary
REGRESSION: r27486 caused a layout regression at my bank's website
Brady Eidson
Reported
2007-11-06 23:14:24 PST
http://trac.webkit.org/projects/webkit/changeset/27486
caused a layout regression at my bank's website. It's a smaller credit union so to avoid the hassle of me debugging with my login along with someone, I have a convincing reduction which I will attach. In the reduction, there is a green image that is a header, and a red image that is in the main content portion of the page. The red image should be touching the green image, and they should be left aligned. After 27486, if you shrink the window vertically to the point where scrollbars are needed and much of the red image is not on screen, the main content div jumps to the left instead of remaining left justified with the header div. Resizing the window horizontally while in this state shifts how much the div is off. Before 27485 and in Firefox, these images stay touching and left-justified to each other
Attachments
Reduction - HTML + 2 images
(1.32 KB, application/zip)
2007-11-06 23:15 PST
,
Brady Eidson
no flags
Details
HTML + 2 images
(1.30 KB, application/zip)
2007-11-06 23:19 PST
,
Brady Eidson
no flags
Details
Screenshots of correct layout and weird layout after horizontal resizing
(67.73 KB, application/zip)
2007-11-06 23:23 PST
,
Brady Eidson
no flags
Details
Flip the signs
(9.00 KB, patch)
2007-11-06 23:56 PST
,
mitz
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2007-11-06 23:15:08 PST
Created
attachment 17096
[details]
Reduction - HTML + 2 images
Brady Eidson
Comment 2
2007-11-06 23:17:32 PST
Both on the live site and in my reduction, RenderBlock.cpp:606 is hit. Mitz thought this was very odd on IRC :)
Brady Eidson
Comment 3
2007-11-06 23:19:46 PST
Created
attachment 17097
[details]
HTML + 2 images
Brady Eidson
Comment 4
2007-11-06 23:20:18 PST
Whoops, meant to attach screenshots. Coming up...
Brady Eidson
Comment 5
2007-11-06 23:23:08 PST
Created
attachment 17098
[details]
Screenshots of correct layout and weird layout after horizontal resizing
mitz
Comment 6
2007-11-06 23:56:35 PST
Created
attachment 17100
[details]
Flip the signs That's what happens when I try to write new code instead of copying and pasting old, working code.
Brady Eidson
Comment 7
2007-11-07 00:12:06 PST
Comment on
attachment 17100
[details]
Flip the signs Yay!
mitz
Comment 8
2007-11-07 00:16:09 PST
Landed in <
http://trac.webkit.org/projects/webkit/changeset/27504
>.
Brady Eidson
Comment 9
2007-11-07 09:11:23 PST
Definitely fixed. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug