WebCore:

Reviewed by Brady Eidson.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15877
          REGRESSION: r27486 caused a layout regression at my bank's website

        Test: fast/block/float/overhanging-after-height-decrease-offsets.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):

LayoutTests:

        Reviewed by Brady Eidson.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15877
          REGRESSION: r27486 caused a layout regression at my bank's website

        * fast/block/float/overhanging-after-height-decrease-offsets.html: Added.
        * platform/mac-leopard/fast/block/float/overhanging-after-height-decrease-offsets-expected.checksum: Added.
        * platform/mac-leopard/fast/block/float/overhanging-after-height-decrease-offsets-expected.png: Added.
        * platform/mac/fast/block/float/overhanging-after-height-decrease-offsets-expected.txt: Added.



Canonical link: https://commits.webkit.org/21425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27504 268f45cc-cd09-0410-ab3c-d52691b4dbfc